# Chess

./: .gitignore  CMakeLists.txt
include/: Alliance.hpp  BoardUtils.hpp  Game.hpp  pch.hpp
include/AI/: BoardEvaluator.hpp  MiniMax.hpp
include/Board/: Board.hpp  Tile.hpp
include/Move/: MajorAttackMove.hpp  MajorMove.hpp  Move.hpp  MoveStatus.hpp  MoveTransition.hpp  PawnJump.hpp  PawnMove.hpp  PawnPromotion.hpp
include/Piece/: Bishop.hpp  Knight.hpp  Piece.hpp  Queen.hpp  Rook.hpp
include/Player/: Player.hpp
src/: BoardUtils.cpp  Game.cpp  main.cpp  pch.hpp
src/AI/: BoardEvaluator.cpp  MiniMax.cpp
src/Board/: Board.cpp  Tile.cpp
src/Move/: CastlingMove.cpp  CastlingMove.hpp  MajorAttackMove.cpp  MajorMove.cpp  Move.cpp  MoveStatus.cpp  MoveTransition.cpp  PawnAttackMove.cpp  PawnAttackMove.hpp  PawnEnPassantAttack.cpp  PawnEnPassantAttack.hpp  PawnJump.cpp  PawnMove.cpp  PawnPromotion.cpp
src/Piece/: Bishop.cpp  King.cpp  King.hpp  Knight.cpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Queen.cpp  Rook.cpp
src/Player/: BlackPlayer.hpp  Player.cpp  WhitePlayer.hpp
